ansible.cfg path adjustment, syntax improved on .yml

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -141,7 +141,7 @@
 ;hash_behaviour=replace
 
 # (pathlist) Comma separated list of Ansible inventory sources
-inventory=/var/lib/awx/projects/_10__cbs_test
+inventory=inventory
 
 # (pathspec) Colon separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=~/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
@@ -227,7 +227,7 @@ inventory=/var/lib/awx/projects/_10__cbs_test
 ;remote_user=
 
 # (pathspec) Colon separated paths in which Ansible will search for Roles.
-roles_path=/usr/share/ansible/roles:/etc/ansible/roles:/var/lib/awx/projects/_10__cbs_test/roles
+roles_path=/usr/share/ansible/roles:/etc/ansible/roles:roles
 
 # (string) Set the main callback used to display Ansible output, you can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
