Corrected a syntax error in contentviews.yml

--- a/group_vars/all/contentviews.yml
+++ b/group_vars/all/contentviews.yml
@@ -1,5 +1,5 @@
 ---
-- include_vars: sat_server.yml
+include_vars: sat_server.yml
 description: "Published by ansible-tower on {{ ansible_date_time.date }}"
 filter_enddate: "{{ ansible_date_time.date }}"
 num_cvs_to_keep: 3
