changed publish only host to localhost

--- a/publishonly.yml
+++ b/publishonly.yml
@@ -4,7 +4,7 @@
 # # This is intended for use with an Ansible Automation Platform Workflow
 
 - name: Publish the configured Content Views and Composite Content Views
-  hosts: all
+  hosts: localhost
   connection: local
   roles:
     - cvpublisher
