--- a/cvsinfo.yml
+++ b/cvsinfo.yml
@@ -6,8 +6,9 @@
     - name: "Show all content view_versions for a content view"
       redhat.satellite.content_view_version_info:
         username: "admin"
-        password: "i22"
+        password: "it22"
         organization: "IT22"
-        server_url: "https://cbs-aap-vm.it22.cloud"
-        content_view: "cbs-content-views"
+        server_url: "https://cbs-satellite-master.it22.cloud"
+        content_view: "CBS-content-views"
+        validate_certs: no
 ...
