--- a/group_vars/all/sat_server.yml
+++ b/group_vars/all/sat_server.yml
@@ -5,5 +5,5 @@ sat_organization: "IT22"
 sat_location: "EUW Azure"
 sat_publisher_username: "{{ vault_sat_publisher_username }}"
 sat_publisher_password: "{{ vault_sat_publisher_password }}"
-sat_validate_certs: true
+sat_validate_certs: false
 ...
