--- a/promoidea.yml
+++ b/promoidea.yml
@@ -37,6 +37,6 @@
           current_lifecycle_environment: "Pre-production"
           lifecycle_environments: "CBS-Production"
         loop: "{{ version_info['stdout']| default([], true) }}"
-        when: (item['environments']['name'] = Pre-production)
+        when: (item['environments']['name'] = 'Pre-production')
 #    loop: "{{ cv_list | default([], true) }}"
 ...
