--- a/pc.yml
+++ b/pc.yml
@@ -10,7 +10,7 @@
       server_url: "https://cbs-satellite-master.it22.cloud"
       content_view: "CBS-content-views"
       organization: "IT22"
-      current_lifecycle_environment: "Pre-production"
-      lifecycle_environments: "CBS-Production"
-      #version: "4.0"
+      #current_lifecycle_environment: "Pre-production"
+      lifecycle_environments: "Pre-production"
+      version: "3.0"
 ...
