adding the force_promote

--- a/pc.yml
+++ b/pc.yml
@@ -13,4 +13,5 @@
       #current_lifecycle_environment: "Pre-production"
       lifecycle_environments: "Pre-production"
       version: "3.0"
+      force_promote: yes
 ...
