--- a/roles/cvspromoter/tasks/main.yml
+++ b/roles/cvspromoter/tasks/main.yml
@@ -8,10 +8,32 @@
     content_view: "CBS-content-views"         #Currently hardcoded, change to dynamic
     validate_certs: "{{ sat_validate_certs }}"
   register: version_info
-- name: Flatten list
+
+- name: Flatten list for promoting cv from pre to prod
   set_fact:
     flat_version_info: "{{version_info['content_view_versions'] | flatten}}"
+
 - name: Set variable and promote content
   include_tasks: supplemental_pc.yml
   loop: "{{ flat_version_info | default([], true) }}"
+
+- name: get highest ID number
+  set_fact:
+    latest_id: "{{ cvs_list['content_view']['versions'] | map(attribute='id') | max }}"
+          
+- name: Get version associated with ID number
+  set_fact:
+    latest_version: " {{ cvs_list['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
+
+- name: Promote the new content view version
+  redhat.satellite.content_view_version:
+    username: "{{ sat_publisher_username }}"
+    password: "{{ sat_publisher_password }}"
+    server_url: "{{ sat_server_url }}"
+    organization: "{{ sat_organization }}"
+    validate_certs: "{{ sat_validate_certs }}"
+    content_view: "{{ CBS-content-views}}"    #Currently hardcoded, change to dynamic
+    description: "{{ description }}"
+    lifecycle_environments: "CBS-Production"
+    version: "{{latest_version}}"
 ...
