--- a/roles/cvspromoter/tasks/main.yml
+++ b/roles/cvspromoter/tasks/main.yml
@@ -19,11 +19,11 @@
 
 - name: get highest ID number
   set_fact:
-    latest_id: "{{ cvs_list['content_view']['versions'] | map(attribute='id') | max }}"
+    latest_id: "{{ version_info['content_view']['versions'] | map(attribute='id') | max }}"
           
 - name: Get version associated with ID number
   set_fact:
-    latest_version: " {{ cvs_list['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
+    latest_version: " {{ version_info['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
 
 - name: Promote the new content view version
   redhat.satellite.content_view_version:
