--- a/roles/cvspromoter/tasks/main.yml
+++ b/roles/cvspromoter/tasks/main.yml
@@ -1,4 +1,4 @@
----
+--
 - name: Show all content view_versions for a content view
   redhat.satellite.content_view_version_info:
     username: "{{ sat_publisher_username }}"
@@ -8,6 +8,15 @@
     content_view: "CBS-content-views"         #Currently hardcoded, change to dynamic
     validate_certs: "{{ sat_validate_certs }}"
   register: version_info
+
+- name: get contentview information
+  redhat.satellite.content_view_info:
+    username: "{{ sat_publisher_username }}"
+    password: "{{ sat_publisher_password }}"
+    server_url: "{{ sat_server_url }}"
+    validate_certs: "{{ sat_validate_certs }}"
+    name: "CBS-content-views"
+  register: cvs_list
 
 - name: Flatten list for promoting cv from pre to prod
   set_fact:
@@ -19,11 +28,11 @@
 
 - name: get highest ID number
   set_fact:
-    latest_id: "{{ version_info['content_view']['versions'] | map(attribute='id') | max }}"
+    latest_id: "{{ cvs_list['content_view']['versions'] | map(attribute='id') | max }}"
           
 - name: Get version associated with ID number
   set_fact:
-    latest_version: " {{ version_info['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
+    latest_version: " {{ cvs_list['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
 
 - name: Promote the new content view version
   redhat.satellite.content_view_version:
