added new cvspublisher role and publishandpromote.yml

--- a/group_vars/all/contentviews.yml
+++ b/group_vars/all/contentviews.yml
@@ -1,8 +1,8 @@
 ---
 include_vars: sat_server.yml
-description: "Published by ansible-tower on {{ ansible_date_time.date }}"
-filter_enddate: "{{ ansible_date_time.date }}"
-num_cvs_to_keep: 3
+#description: "Published by ansible-tower on {{ ansible_date_time.date }}"
+#filter_enddate: "{{ ansible_date_time.date }}"
+#num_cvs_to_keep: 3
 content_views:
   - name: "RHEL7_SOE"
     desc: "Red Hat Enterprise Linux 7 Standard Operating Environment Content"
