--- a/group_vars/all/sat_server.yml
+++ b/group_vars/all/sat_server.yml
@@ -1,9 +1,14 @@
 ---
 include_vars: vault.yml
+# Satellite access information
 sat_server_url: "https://cbs-satellite-master.it22.cloud"
 sat_organization: "IT22"
 sat_location: "EUW Azure"
 sat_publisher_username: "{{ vault_sat_publisher_username }}"
 sat_publisher_password: "{{ vault_sat_publisher_password }}"
 sat_validate_certs: false
+# Update parameters
+description: "Published by ansible-tower on {{ ansible_date_time.date }}"
+filter_enddate: "{{ ansible_date_time.date }}"
+num_cvs_to_keep: 3
 ...
