bugfix for the cvspromoter role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -227,7 +227,7 @@ library=~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules:/usr/share
 ;remote_user=
 
 # (pathspec) Colon separated paths in which Ansible will search for Roles.
-roles_path=/usr/share/ansible/roles:/etc/ansible/roles:roles
+roles_path=/usr/share/ansible/roles:/etc/ansible/roles:roles:collections/ansible_collections/redhat/satellite/roles
 
 # (string) Set the main callback used to display Ansible output, you can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
