--- a/promoteonly.yml
+++ b/promoteonly.yml
@@ -3,7 +3,7 @@
 # # This is intended for periodic scheduled publishing rather than CV/CCV general maintenance.
 # # This is intended for use with an Ansible Automation Platform Workflow
 
-- name: Publish the configured Content Views and Composite Content Views
+- name: Promote CVs to the next environment
   hosts: localhost
   connection: local
   roles:
