--- a/publishandpromote.yml
+++ b/publishandpromote.yml
@@ -1,9 +1,9 @@
 ---
-# This play promotes the contentviews for the Satellite
+# This play publishes and promotes the contentviews for the Satellite
 # # This is intended for periodic scheduled publishing rather than CV/CCV general maintenance.
 # # This is intended for use with an Ansible Automation Platform Workflow
 
-- name: Publish the configured Content Views and Composite Content Views
+- name: Publish and promote the configured Content Views
   hosts: localhost
   connection: local
   roles:
