changed promoter role to be compatible with older versions of ansible

--- a/cv_cleanup.yml
+++ b/cv_cleanup.yml
@@ -5,10 +5,13 @@
 - name: Remove content views that are not in use
   hosts: localhost
   connection: local
+  vars:
+    version_list: []
+    cvv_remove_list: []
 #  roles:
 #    - cvcleanup
   tasks:
-    # Gather information about the content view. This information will be formatted and used in later modules
+# Get complete information on CV
     - name: Get contentview information
       redhat.satellite.content_view_info:
         username: "{{ sat_publisher_username }}"
@@ -18,25 +21,55 @@
         name: "{{ cv_name }}"
       register: cvs_list
 
+# Use complete information on CV to make a list of all version numbers
+    - name: Compose version list
+      set_fact:
+        version_list: "{{ version_list }} + ['{{ item['version'] }}']"
+      loop: "{{ cvs_list['content_view']['versions'] }}"
+
 # Registers the ID of the pre-production envrionment as a fact. Used in the next task to get the correct version number.
     - name: Set id of Pre-production environment variable
       set_fact:
-        pre_prod_id: "{{ cvs_list['content_view']['environments'] | selectattr('name', 'equalto', test_env) | map(attribute='id') }}"
- 
-# Uses the previous fact to register the version number of the CV version that is currently in pre-production 
-    - name: Set cvs version that is currently in pre-production variable
+        pre_prod_id: "{{ cvs_list['content_view']['environments'] | selectattr('name', 'equalto', test_env) | map(attribute='id') | replace('[','') | replace(']','')}}"
+
+# Uses the previous fact to register the version number of the CV version that is currently in pre-production
+    - name: Set CV version that is currently in pre-production variable
       set_fact:
-        pre_prod_version: "{{ cvs_list['content_view']['versions'] | selectattr('environment_ids', 'equalto', pre_prod_id) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
+        pre_prod_version: " {{ item['version'] }}"
+      loop: "{{ cvs_list['content_view']['versions'] }}"
+      when: pre_prod_id|int in item['environment_ids']
 
- # Sorts the content views based on ID number and registers the highest and thus most recent ID number as fact. Used in the next task to get the correct version number. 
-    - name: Get highest version ID number
-      set_fact:                
-        latest_id: "{{ cvs_list['content_view']['versions'] | map(attribute='id') | max }}"
+# Registers the ID of the pre-production envrionment as a fact. Used in the next task to get the correct version number.
+    - name: Set id of Pre-production environment variable
+      set_fact:
+        prod_id: "{{ cvs_list['content_view']['environments'] | selectattr('name', 'equalto', prod_env) | map(attribute='id') | replace('[','') | replace(']','')}}"
 
-# Uses the previous fact to register the version number of the most recent CV
-    - name: Get version number associated with ID number
-      set_fact:                
-        latest_version: " {{ cvs_list['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
-    - name: print pre_prod_version
-      debug:
-        msg: "{{ pre_prod_version }}"
+# Uses the previous fact to register the version number of the CV version that is currently in pre-production
+    - name: Set CV version that is currently in pre-production variable
+      set_fact:
+        prod_version: " {{ item['version'] }}"
+      loop: "{{ cvs_list['content_view']['versions'] }}"
+      when: prod_id|int in item['environment_ids']
+
+# Creates a list of CV version to remove by taking the full version list and removing the version that are in production and pre-production
+    - name: Compose list of CV versions to remove
+      set_fact:
+        cvv_remove_list: "{{ cvv_remove_list }} + ['{{ item }}']"
+      loop: "{{ version_list }}"
+      when: 
+        - prod_version|trim != item
+        - pre_prod_version|trim != item
+
+# Removes all the CV version that are on the list of CV versions to remove
+    - name: Remove CV versions
+      redhat.satellite.content_view_version:
+        username: "{{ sat_publisher_username }}"
+        password: "{{ sat_publisher_password }}"
+        server_url: "{{ sat_server_url }}"
+        organization: "{{ sat_organization }}"
+        validate_certs: "{{ sat_validate_certs }}"
+        content_view: "{{ cv_name }}"
+        state: absent
+        version: "{{ item }}"
+      loop: "{{ cvv_remove_list }}"
+...  
