--- a/roles/cvpromoter/tasks/main.yml
+++ b/roles/cvpromoter/tasks/main.yml
@@ -1,6 +1,6 @@
---- 
+---
 # Gather information about the content view. This information will be formatted and used in later modules
-- name: Get contentview information
+- name: Get CV information
   redhat.satellite.content_view_info:
     username: "{{ sat_publisher_username }}"
     password: "{{ sat_publisher_password }}"
@@ -12,17 +12,23 @@
 # Registers the ID of the pre-production envrionment as a fact. Used in the next task to get the correct version number.
 - name: Set id of Pre-production environment variable
   set_fact:
-    pre_prod_id: "{{ cvs_list['content_view']['environments'] | selectattr('name', 'equalto', test_env) | map(attribute='id') | replace('[','') | replace(']','')}}"
+    pre_prod_id: "{{ item['id'] }}"
+  loop: "{{ cvs_list['content_view']['environments'] }}"
+  when: test_env in item['name']
 
 # Uses the previous fact to register the version number of the CV version that is currently in pre-production
-- name: Set cvs version that is currently in pre-production variable
+- name: Set CV version that is currently in pre-production variable
   set_fact:
-    pre_prod_version: " {{ item['version'] }}"
+    pre_prod_version: "{{ item['version'] }}"
   loop: "{{ cvs_list['content_view']['versions'] }}"
   when: pre_prod_id|int in item['environment_ids']
 
+- name: Check pre_prod_version
+  debug:
+    msg: "{{ pre_prod_version }}"
+
 # Promotes the CV that is currently in pre-production to production using the facts set in the previous two tasks
-- name: Promote the new content view version
+- name: Promote the CV from pre-production to production
   redhat.satellite.content_view_version:
     username: "{{ sat_publisher_username }}"
     password: "{{ sat_publisher_password }}"
@@ -32,19 +38,18 @@
     content_view: "{{ cv_name }}"
     description: "{{ description }}"
     lifecycle_environments: "{{ prod_env }}"
-    version: "{{ pre_prod_version | trim}}"
+    version: "{{ pre_prod_version }}"
 
- # Sorts the content views based on ID number and registers the highest and thus most recent ID number as fact. Used in the next task to get the correct version number. 
-- name: Get highest version ID number
-  set_fact:                
-    latest_id: "{{ cvs_list['content_view']['versions'] | map(attribute='id') | max }}"
+- name: Get list of version numbers
+  set_fact:
+    version_list: "{{ version_list }} + ['{{ item['version'] }}']"
+  loop: "{{ cvs_list['content_view']['versions'] }}"
+    
+- name: Get the highest version number
+  set_fact:
+    latest_version: "{{ version_list | max }}"
 
-# Uses the previous fact to register the version number of the most recent CV
-- name: Get version number associated with ID number
-  set_fact:                
-    latest_version: " {{ cvs_list['content_view']['versions'] | selectattr('id', 'equalto', latest_id|int) | map(attribute='version') | replace('[','') | replace(']','') | replace(\"'\",'') }}"
-# Promotes the latest CV to pre-production using the facts set in the previous two tasks 
-
+# Promotes the latest CV to pre-production 
 - name: Promote the latest version of the CV to pre-production
   redhat.satellite.content_view_version:
     username: "{{ sat_publisher_username }}"
@@ -55,5 +60,5 @@
     content_view: "{{ cv_name }}"
     description: "{{ description }}"
     lifecycle_environments: "{{ test_env }}"
-    version: "{{ latest_version | trim }}"
+    version: "{{ latest_version }}"
 ...
