cleaned up the project

--- a/group_vars/all/sat_vars.yml
+++ b/group_vars/all/sat_vars.yml
@@ -15,4 +15,5 @@ num_cvs_to_keep: 3
 test_env: "Pre-production"
 prod_env: "CBS-Production"
 cv_name: "CBS-content-views"
+errata_filter_name: "ErrataByDate"
 ...
