--- a/roles/cvpublisher/tasks/main.yml
+++ b/roles/cvpublisher/tasks/main.yml
@@ -4,7 +4,7 @@
     username: "{{ sat_publisher_username }}"
     password: "{{ sat_publisher_password }}"
     server_url: "{{ sat_server_url }}"
-    name: "ErrataByDate"
+    name: "{{ errata_filter_name }}"
     organization: "{{ sat_organization }}"
     validate_certs: "{{ sat_validate_certs }}"
     content_view: "{{ cv_name }}"
