--- a/roles/cvpromoter/tasks/main.yml
+++ b/roles/cvpromoter/tasks/main.yml
@@ -48,8 +48,8 @@
 
 #Compares the version numbers in the list and registers the highest version number
 - name: Get the version number associated with the highest ID number
-  debug:
-    msg: "{{ item['id'] }}"
+  set_fact:
+    latest_version: "{{ item['id'] }}"
   loop: "{{ cvs_list['content_view']['versions'] }}"
   when: version_list|int ==  item['id']
 
